syntax = "proto3";
package chimp.agent.v1;

message StartRequest {
  uint32 cpu_percent = 1;
  uint32 memory_mb = 2;
  uint32 duration_seconds = 3;
  Kind kind = 4;
}

message StopRequest {}

message Empty {}

enum Kind {
  KIND_UNSPECIFIED = 0;
  CPU = 1;
  MEMORY = 2;
}

service Agent {
  rpc Start(StartRequest) returns (Empty);
  rpc Stop(StopRequest) returns (Empty);
}

